Fix missing background

--- a/src/style.css
+++ b/src/style.css
@@ -16,7 +16,7 @@
 }
 
 html {
-	background: var(--background) url(./assets/bg.jpg);
+	background: var(--background) url(/assets/bg.jpg);
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-position: center;
